Revamped the filtering system and added Spotify integration.
In this commit, I made significant improvements to the filtering system, enhancing the efficiency and accuracy of the results. Additionally, I integrated the Spotify system, allowing users to enjoy a seamless music experience within our application.

These updates provide refined and personalized filtering, while adding a new layer of entertainment for our users, making the overall experience more enjoyable.

Details of the changes made:
- Optimized the filtering algorithm for more precise and relevant results.
- Fully integrated the Spotify system, enabling users to search, play, and save songs directly within our application.
- Enhanced the user interface related to filtering and the Spotify system, making it intuitive and user-friendly.

--- a/src/components/FilterOwners/styles.css
+++ b/src/components/FilterOwners/styles.css
@@ -4,7 +4,15 @@
   gap: 20px;
 }
 
-.filterByOwner div {
+.filterByOwner .photoFrame {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.filterByOwner .photoImage {
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -15,4 +23,9 @@
   font-size: 15px;
   font-weight: 700;
   color: #3B4374;
+}
+
+.ownersPhoto {
+  display: flex;
+  gap: 10px;
 }
